MAINT-2674 Add support for listing authoring activity by user(s) on specified branch(es)